--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background: #fff;
+	background: #efeff4;
 }
 .p1-wrapper{
 	position: relative;
@@ -58,7 +58,58 @@ body{
 	padding: 20px 15px;
 	top: 220px;
 }
+.p2-title{
+	position: fixed;
+	top: 0;
+  left: 0;
+  right: 0;
+	width: 100%;
+  z-index: 500;
+  border-bottom: 1px solid #d9d9d9;
+  background: #fff;
+}
+.p2-title>h1{
+	text-align: center;
+  font-size: 20px;
+  height: 46px;
+  line-height: 46px;
+  font-weight: normal;
+  color: #666;
+}
+.p2-interv-btn{
+	position: absolute;
+  height: 39px;
+  line-height: 39px;
+  top: 2px;
+  right: 15px;
+}
+.p2-interv-btn-hidden{
+  position: absolute;
+  height: 39px;
+  line-height: 39px;
+  top: -12px;
+  right: 15px;
+}
 
+.p2-start{
+  margin-top:50px;
+}
+.p2-footer{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 500;
+  background: #fff;
+}
+.p2-end-btn{
+  width: 90%;
+}
+.p2-time{
+  height: 32px;
+  line-height: 32px;
+  text-align: center;
+}
 
 
 
