--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,56 +59,54 @@ body{
 	top: 220px;
 }
 .p2-title{
-	position: fixed;
-	top: 0;
-  left: 0;
-  right: 0;
-	width: 100%;
-  z-index: 500;
-  border-bottom: 1px solid #d9d9d9;
-  background: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    z-index: 500;
+    border-bottom: 1px solid #d9d9d9;
+    background: #fff;
 }
 .p2-title>h1{
-	text-align: center;
-  font-size: 20px;
-  height: 46px;
-  line-height: 46px;
-  font-weight: normal;
-  color: #666;
+    text-align: center;
+    font-size: 20px;
+    height: 46px;
+    line-height: 46px;
+    font-weight: normal;
+    color: #666;
 }
 .p2-interv-btn{
-	position: absolute;
-  height: 39px;
-  line-height: 39px;
-  top: 2px;
-  right: 15px;
+    position: absolute;
+    height: 39px;
+    line-height: 39px;
+    top: 2px;
+    right: 15px;
 }
 .p2-interv-btn-hidden{
-  position: absolute;
-  height: 39px;
-  line-height: 39px;
-  top: -12px;
-  right: 15px;
+    position: absolute;
+    height: 39px;
+    line-height: 39px;
+    top: -12px;
+    right: 15px;
+    display: none;
 }
-
 .p2-start{
-  margin-top:50px;
+    position: fixed;
+    width: 100%;
+    top: 47px;
+    left: 0;
+    z-index: 500;
 }
-.p2-footer{
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 500;
-  background: #fff;
+.p2-on{
+    display: none;
 }
-.p2-end-btn{
-  width: 90%;
-}
-.p2-time{
-  height: 32px;
-  line-height: 32px;
-  text-align: center;
+.p2-on>p{
+    background: #fff;
+    height: 44px;
+    line-height: 44px;
+    padding-left:20px;
+
 }
 
 
